Bug 1660212 - Disable XINPUT2 by default (revert Bug 1207700), r=botond a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D90058